# memapi

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  bench.sh  build.rs  rustfmt.toml  ta.py  tam.py  tc.sh  test.bat  test.sh  test_const.sh  testall.py  upd.diff
.github/workflows/: codeql.yml  snyk-security.yml  test.macos.tmp.yml  test.yml  testall.yml
benches/: alloc.rs  bench.rs  helpers.rs  jemalloc.rs  layout.rs
const_if_macro/: Cargo.toml
const_if_macro/src/: lib.rs
devbin/: err_fmt.rs
jemalloc/: Cargo.toml
mimalloc/: Cargo.toml
src/: alloc_ext.rs  const_heap_alloc.rs  error.rs  helpers.rs  in_place.rs  layout.rs  lib.rs  marker.rs  owned.rs  stats.rs  tests.rs  traits.rs  type_props.rs  unstable_util.rs
src/allocs/: c_alloc.rs  mod.rs  stack_alloc.rs
src/c_alloc/: ffi.rs  mod.rs
src/c_alloc/c/: calloca.c
src/data/: boxed.rs  marker.rs  misc_traits.rs  mod.rs  type_props.rs
src/external_alloc/: jemalloc.rs  libc_malloc.rs  mimalloc.rs  mod.rs
src/features/: alloc_aligned_at.rs  alloc_ext.rs  alloc_slice.rs  checked_dealloc.rs  fallible_dealloc.rs  in_place.rs  mod.rs  owned.rs  resize_in_place.rs  stats.rs
src/features/fallible_dealloc/: ext.rs  mod.rs  slice.rs
src/features/owned/: buf.rs  into_iter.rs  mod.rs  val.rs
src/features/stats/: data.rs  lock.rs  minstring.rs  mod.rs  stat_logger.rs
src/ffi/: c_alloc.rs  mod.rs  stack_alloc.rs
src/ffi/c/: calloca.c
src/traits/: alloc.rs  alloc_checked.rs  alloc_mut.rs  alloc_temp.rs  helpers.rs  mod.rs
src/traits/data/: marker.rs  type_props.rs
tests/: alloc.rs  alloc_ext.rs  alloc_mut.rs  alloc_slice.rs  c_alloc.rs  extra_traits.rs  helpers.rs  jemalloc.rs  layout.rs  malloc.rs  mimalloc.rs  owned.rs  potential_ub.rs  stack_alloc.rs  stats.rs  test.rs
