[package]
name = "memapi2"
version = "0.8.1"
edition = "2018"
rust-version = "1.46.0"
authors = ["echohumm"]
description = "A no_std/no-alloc-friendly memory allocation interface for raw buffers, with improved error reporting."
license = "GPL-3.0 OR MIT"
repository = "https://github.com/echohumm/memapi"
keywords = ["allocator", "no_std", "memory", "allocation"]
categories = ["no-std::no-alloc", "memory-management"]
include = [
    "src/**",
    "build.rs",
    "Cargo.toml",
]
build = "build.rs"



[package.metadata.docs.rs]
features = ["full"]

[badges]
docsrs = { status = "passing" }
maintenance = { status = "actively-developed" }



[features]
default = []

dev = []

c_alloc = []

# msrv-changing features
## that make small changes
c_str = []

mut_alloc = []

# nightly support
## allows disabling allocator_api even on nightly
no_nightly = []
metadata = []
sized_hierarchy = []

all_nightly = ["metadata", "sized_hierarchy"]

# std support
std = []

# specific std features
os_err_reporting = ["std"]

full_msrv = ["os_err_reporting", "c_alloc"]
full = [
    "full_msrv",
    "c_str",
]
full_nightly = ["full", "all_nightly"]



[dependencies]
rustversion = "1.0.22"

[build-dependencies]
rustversion = "1.0.22"

#[dev-dependencies]
#criterion = "0.8.1"
#
#[[bench]]
#name = "lyt"
#path = "benches/layout.rs"
#harness = false



[[test]]
name = "alc"
path = "tests/alloc.rs"

[[test]]
name = "c_alc"
path = "tests/c_alloc.rs"

[[test]]
name = "hlp"
path = "tests/helpers.rs"

[[test]]
name = "lyt"
path = "tests/layout.rs"
