[package]
name = "memapi2"
version = "0.8.1"
edition = "2018"
rust-version = "1.46.0"
authors = ["echohumm"]
#noinspection LongLine
description = "A no_std/no-alloc-friendly memory allocation interface for raw buffers, with improved error reporting."
license = "GPL-3.0 OR MIT"
repository = "https://github.com/echohumm/memapi"
keywords = ["allocator", "no_std", "memory", "allocation"]
categories = ["no-std::no-alloc", "memory-management"]
include = [
    "src/**",
    "build.rs",
    "Cargo.toml",
]
build = "build.rs"



[package.metadata.docs.rs]
features = ["full"]

[badges]
docsrs = { status = "passing" }
maintenance = { status = "actively-developed" }



[features]
default = []

# internal features
dev = []

# msrv-changing features
## that make small changes
c_str = []

# nightly support
## allows disabling allocator_api on nightly
no_nightly = []
metadata = []
sized_hierarchy = []

all_nightly = ["metadata", "sized_hierarchy"]

# std support
std = []

# allocator support
## the standard c allocator
c_alloc = []
stack_alloc = ["alloc_temp_trait", "c_alloc", "cc"]

# actual features
## support best-effort os error reporting from errno
os_err_reporting = ["std"]
## adds support for catching unwinds to stack_alloc
catch_unwind = ["std", "stack_alloc"]
## add a set of traits for allocating with an allocator behind a mutable reference
alloc_mut_traits = []
## adds a trait for temporary, scoped allocations
alloc_temp_trait = []

full_msrv = ["os_err_reporting", "c_alloc", "stack_alloc", "alloc_mut_traits"]
full = [
    "full_msrv",
    "c_str",
]
full_nightly = ["full", "all_nightly"]



[dependencies]
rustversion = "1.0.22"

[build-dependencies]
rustversion = "1.0.22"
cc = { version = "=1.0.79", optional = true }

#[dev-dependencies]
#criterion = "0.8.1"
#
#[[bench]]
#name = "lyt"
#path = "benches/layout.rs"
#harness = false



[[test]]
name = "alc"
path = "tests/alloc.rs"

[[test]]
name = "stk"
path = "tests/stack_alloc.rs"
required-features = ["stack_alloc"]

[[test]]
name = "c_alc"
path = "tests/c_alloc.rs"

[[test]]
name = "hlp"
path = "tests/helpers.rs"

[[test]]
name = "lyt"
path = "tests/layout.rs"
