[package]
name = "memapi2"
version = "0.11.4"
edition = "2018"
rust-version = "1.46.0"
authors = ["echohumm"]
#noinspection LongLine
description = "A no_std/no-alloc-friendly memory allocation interface for raw buffers, with improved error reporting."
license = "GPL-3.0 OR MIT"
repository = "https://github.com/echohumm/memapi"
readme = "README.md"
keywords = ["allocator", "no_std", "no_alloc", "memory", "allocation"]
categories = ["no-std::no-alloc", "memory-management"]
include = [
    "src/**",
    "build.rs",
    "Cargo.toml",
    "README.md"
]
build = "build.rs"



[package.metadata.docs.rs]
features = ["full"]

[badges]
docsrs = { status = "passing" }
maintenance = { status = "actively-developed" }



[features]
default = []

# internal features
dev = []

# nightly support
## allows disabling allocator_api on nightly
no_nightly = []
## allows disabling the usage of the alloc crate
no_alloc = []
metadata = []

# std support
std = []

# allocator support
## the standard c allocator
c_alloc = []
## c alloca-based allocator
stack_alloc = ["alloc_temp_trait", "c_alloc", "cc"]
## adds a trait for temporary, scoped allocations
alloc_temp_trait = []

# actual features
## support best-effort os error reporting from errno
os_err_reporting = ["std"]
## adds support for catching unwinds to stack_alloc
catch_unwind = ["stack_alloc", "std"]

# feature bundles
full = ["c_alloc", "catch_unwind", "os_err_reporting"]
full_nightly = ["metadata", "full"]



[dependencies]
bitflags = "=1.3.2"
libc = { version = "=0.2.163", default-features = false }
rustversion = "=1.0.22"

[build-dependencies]
cc = { version = "=1.0.83", optional = true }
libc = { version = "=0.2.163", default-features = false }
rustversion = "=1.0.22"



#[dev-dependencies]
#criterion = "0.8.1"
#
#[[bench]]
#name = "lyt"
#path = "benches/layout.rs"
#harness = false
#
#[[bench]]
#name = "alc"
#path = "benches/alloc.rs"
#harness = false
#
#[[bench]]
#name = "hlp"
#path = "benches/helpers.rs"
#harness = false



[[test]]
name = "alc"
path = "tests/alloc.rs"

[[test]]
name = "malc"
path = "tests/alloc_mut.rs"
required-features = []

[[test]]
name = "stk"
path = "tests/stack_alloc.rs"
required-features = ["stack_alloc"]

[[test]]
name = "c_alc"
path = "tests/c_alloc.rs"

[[test]]
name = "hlp"
path = "tests/helpers.rs"

[[test]]
name = "lyt"
path = "tests/layout.rs"
