[package]
name = "const_if_macro"
version = "1.0.0"
edition = "2018"
rust-version = "1.63"

[badges]
docsrs = { status = "passing" }

[features]
test = []

[[test]]
name = "test"
path = "src/test.rs"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }
