[package]
name = "mimalloc"
version = "0.1.0"
edition = "2018"
rust-version = "1.56"
repository = "https://github.com/echohumm/memapi/tree/master/mimalloc"
license = "MIT OR Apache-2.0"
links = "mimalloc"
exclude = [
    "/c_src/mimalloc/bin",
    "/c_src/mimalloc/cmake",
    "/c_src/mimalloc/doc",
    "/c_src/mimalloc/docs",
    "/c_src/mimalloc/ide",
    "/c_src/mimalloc/test",
]

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"

[features]
secure = []
debug = []
debug_in_debug = []
override = []
extended = []
arena = []
local_dynamic_tls = []
no_thp = []

[package.metadata.docs.rs]
features = ["extended"]